@@ -7,6 +7,12 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 ## [Unreleased]
 
+### Added
+
+- Memory cache (last 8 bytes read, written)
+- Instruction disassembly callback
+
+
 ## [1.0.0] - 2024-03-26
 
 ### Added
